--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -1,34 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.amd.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <h1>My First Google Map</h1>
 
+<input type="text" class="searchBox">
+
 <div id="googleMap" style="width:100%;height:400px;"></div>
-<p class="info">{{result}}</p>
-<script>
-function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(51.508742,-0.120850),
-    zoom:5,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQJ_sXBz0eIPT4l3pN7QsC_XYKG42JMcU&callback=myMap"></script>
-<script>
 
-// grab data from the DOM
-//find longitude and latitude of the plave entered into the dom
-  // Loop through the data that is returned to plot places on the map
-  $(document).ready(function(){
-$.getJSON("https://developer.nrel.gov/api/windexchange/schoolprojects?api_key=BpwET3I8qcPGHgBcgcECMNuYXfDVEz3zwKN00w1f", result => {
-    console.log(result);
-  })
+<script src="map-project.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQJ_sXBz0eIPT4l3pN7QsC_XYKG42JMcU"></script>
 
-});
-</script>
 </body>
 </html>
