--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -5,7 +5,7 @@
 <h1>My First Google Map</h1>
 
 <input type="text" class="searchBox">
-
+<button class="searchBtn">Search</button>
 <div id="googleMap" style="width:100%;height:400px;"></div>
 
 
