--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -4,8 +4,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <h1>My First Google Map</h1>
 
-<input type="text" class="searchBox">
-
+<input type="text" class="searchBox"><br>
+<button id="searchButton">Search</button>
 <div id="googleMap" style="width:100%;height:400px;"></div>
 
 
