added materialize styling

--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <link rel="stylesheet" href="materialize/css/materialize.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <h1>My First Google Map</h1>
 
-<input type="text" class="searchBox"><br>
-<button id="searchButton">Search</button>
+<input type="text" class="searchBox" placeholder="Search"><br>
+<button class="btn waves-effect waves-light" type="submit" name="action" id="searchButton">Search</button>
+
+<br>
 <div id="googleMap" style="width:100%;height:400px;"></div>
 
 
