--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+            <nav>
+                    <div class="nav-wrapper">
+                      <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+                      <ul class="right hide-on-med-and-down">
+                        <li><a href="google-maps-api.html"><i class="material-icons">Search</i></a></li>
+                        <li><a href="projects-listed.html"><i class="material-icons">View_Projects</i></a></li>
+                      </ul>
+                    </div>
+                  </nav>
+    </head>
 <body>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="materialize/css/materialize.css">
