--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -30,7 +30,7 @@
             <script type="text/handlebars-x" class="cityText">
                 <div class="row">
                         <div class="col s12 m6">
-                          <div class="card blue-grey darken-1">
+                          <div class="card blue darken-1">
                             <div class="card-content white-text">
                               <span>
                                   <!-- city goes here -->
@@ -62,9 +62,23 @@
         
         
 </div>
-<script type="text/javascript" src="handlebars/handlebars-v4.0.10.js"></script>
+<script type="text/javascript" src="handlebars-v4.0.11.js"></script>
 <script src="map-project.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQJ_sXBz0eIPT4l3pN7QsC_XYKG42JMcU"></script>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
