--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -53,7 +53,9 @@
                                                         </div>
                                                         {{/if}}
                                                     </div>
+                                                    <h3>{{message}}</h3>
                                                 </div>
+
                                             </script>     
                                         </div> </div>
                       
