--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -5,12 +5,13 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <link rel="stylesheet" href="materialize/css/materialize.css">
+            <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
             <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
 </head>
 <body>
         <nav role="navigation">
                 <div class="nav-wrapper #ffa000 amber darken-2">
-                  <a href="google-maps-api.html" class="brand-logo"><img src="ourLogo.png" alt="The Project Finder" width="25%"></a>
+                  <a href="google-maps-api.html" class="brand-logo"><h3 style="font-family: 'Sedgwick Ave', cursive;">The Project Finder</h3></a>
                   <ul class="right hide-on-med-and-down">
                       <li class="active"><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
                       <li><a href="projects-listed.html"><i class="material-icons">assignment</i>Project List</a></li>
@@ -61,7 +62,7 @@
                       
                       
                             <div class="col s12 m8 l9"> 
-                                    <input type="text" class="searchBox" placeholder="Search"><br>
+                                    <input type="text" class="searchBox" placeholder="Search projects by city"><br>
                                     <button class="btn waves-effect waves-light" type="submit" name="action" id="searchButton">Search</button>
                                     <br>
                                     <div id="googleMap" style="width:100%;height:400px;"></div></div>
