--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -12,7 +12,7 @@
         <nav role="navigation">
                 <div class="nav-wrapper #ffa000 amber darken-2">
                   <a href="google-maps-api.html" class="brand-logo"><h3 style="font-family: 'Sedgwick Ave', cursive;">The Project Finder</h3></a>
-                  <ul class="right hide-on-med-and-down">
+                  <ul class="right hide-on-med-and-down" style="list-style: none;">
                       <li class="active"><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
                       <li><a href="projects-listed.html"><i class="material-icons">assignment</i>Project List</a></li>
                     </ul>
