changed some stuff

--- a/google-maps-api.html
+++ b/google-maps-api.html
@@ -63,7 +63,6 @@
                       
                             <div class="col s12 m8 l9"> 
                                     <input type="text" class="searchBox" placeholder="Search projects by city"><br>
-                                    <button class="btn waves-effect waves-light" type="submit" name="action" id="searchButton">Search</button>
                                     <br>
                                     <div id="googleMap" style="width:100%;height:400px;"></div></div>
                             </div>
@@ -71,7 +70,7 @@
 
         <script src="map-project.js"></script>
         <script src="materialize/js/materialize.min.js"></script>
-        <footer class="page-footer #ffa000 amber darken-2" style="bottom: 0">
+        <footer class="page-footer #ffa000 amber darken-2" style="bottom: 0; position: fixed; width: 100%">
             <div class="footer-copyright">
                 <div class="container">
                     © 2018 Copyright innogy Digital Academy
