--- a/projects-listed.html
+++ b/projects-listed.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="materialize/css/materialize.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
@@ -11,7 +12,7 @@
 <body>
         <nav role="navigation">
         <div class="nav-wrapper #ffa000 amber darken-2">
-          <a href="google-maps-api.html" class="brand-logo"><img src="ourLogo.png" alt="The Project Finder" width="25%"></a>
+          <a href="google-maps-api.html" class="brand-logo"<h3 style="font-family: 'Sedgwick Ave', cursive;">The Project Finder</h3></a>
           <ul class="right hide-on-med-and-down">
               <li><a href="google-maps-api.html"><i class="material-icons">search</i>Search</a></li>
               <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i> </a></li>
