--- a/projects-listed.html
+++ b/projects-listed.html
@@ -12,7 +12,7 @@
 <body>
         <nav role="navigation">
         <div class="nav-wrapper #ffa000 amber darken-2">
-          <a href="google-maps-api.html" class="brand-logo"><img src="ourLogo.png" alt="The Project Finder" width="25%"></a>
+            <a href="google-maps-api.html" class="brand-logo"><h3 style="font-family: 'Sedgwick Ave', cursive;">The Project Finder</h3></a>
           <ul class="right hide-on-med-and-down" style="list-style: none;">
               <li><a href="google-maps-api.html"><i class="material-icons">search</i>Search</a></li>
               <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i> </a></li>
