styling changes made to entire layout

--- a/projects-listed.html
+++ b/projects-listed.html
@@ -11,15 +11,15 @@
 </head>
 <body>
         <nav role="navigation">
-        <div class="nav-wrapper #ffa000 amber darken-2">
-          <a href="google-maps-api.html" class="brand-logo"><img src="ourLogo.png" alt="The Project Finder" width="25%"></a>
+        <div class="nav-wrapper #00695c teal darken-3">
+          <a href="google-maps-api.html" class="brand-logo"><h4 style="font-family: 'Sedgwick Ave', cursive;">City Project Search</h4></a>
           <ul class="right hide-on-med-and-down" style="list-style: none;">
-              <li><a href="google-maps-api.html"><i class="material-icons">search</i>Search</a></li>
+              <li><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
               <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i> </a></li>
             </ul>
             <ul  id="nav-mobile" class="side-nav">
-                <li><a href="google-maps-api.html"><i class="material-icons">search</i>Search</a></li>
-                <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i>Project List</a></li>
+                <li><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
+                <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i></a></li>
             </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse">
                 <i class="material-icons">menu</i>
@@ -34,7 +34,7 @@
             {{#if results}}
                 {{#each results}}
                 <div class="col s12 m6">
-                    <div class="card #ffc107 amber">
+                    <div class="card white">
                         <div class="card-content black-text">
                             <span>
                                   <h3 class="card-title">{{this.City}}</h3>
@@ -61,14 +61,14 @@
     </div>
 
     <script src="materialize/js/materialize.min.js"></script>
-        <footer class="page-footer #ffa000 amber darken-2" style="bottom: 0">
+        <footer class="page-footer  #00695c teal darken-3" style="bottom: 0">
             <div class="footer-copyright">
                 <div class="container">
                     © 2018 Copyright innogy Digital Academy
                     
                 </div>
-                    <a class="" href="https://github.com/misssrakiep/" > <img src="img/24386855.jpeg" width="40" height="40">@missrakiep</a>
-                    <a class="" href="https://github.com/vaztonyo/" > <img src="img/23166192.png" width="40" height="40">@Vaztonyo</a>
+                    <a class="" href="https://github.com/misssrakiep/" > <img src="img/24386855.jpeg" width="40" height="40">Shameera</a>
+                    <a class="" href="https://github.com/vaztonyo/" > <img src="img/23166192.png" width="40" height="40">Vaztonyo de Wet</a>
                     </div>
         
         </footer>
