fixed the links in the navbar

--- a/source/projects-listed.html
+++ b/source/projects-listed.html
@@ -10,13 +10,13 @@
 <body>
     <nav role="navigation">
         <div class="nav-wrapper #00695c teal darken-3">
-            <a href="google-maps-api.html" class="brand-logo"><h4 style="font-family: 'Sedgwick Ave', cursive;">City Project Search</h4></a>
+            <a href="map-project.html" class="brand-logo"><h4 style="font-family: 'Sedgwick Ave', cursive;">City Project Search</h4></a>
             <ul class="right hide-on-med-and-down" style="list-style: none;">
-                <li><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
+                <li><a href="map-project.html"><i class="material-icons">search</i></a></li>
                 <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i> </a></li>
             </ul>
             <ul  id="nav-mobile" class="side-nav">
-                <li><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
+                <li><a href="map-project.html"><i class="material-icons">search</i></a></li>
                 <li class="active"><a href="projects-listed.html"><i class="material-icons">assignment</i></a></li>
             </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse">
