--- a/source/map-project.html
+++ b/source/map-project.html
@@ -9,13 +9,13 @@
 <body>
         <nav role="navigation">
                 <div class="nav-wrapper #00695c teal darken-3">
-                  <a href="google-maps-api.html" class="brand-logo"><h4 style="font-family: 'Sedgwick Ave', cursive; margin-top: -5px"> City Project Search <img src="https://ae01.alicdn.com/kf/HTB1fmmgdI2vU1JjSZFwq6x2cpXaJ/Luz-Da-Cidade-de-Nuvens-brancas-Super-City-Batman-do-est-dio-da-fotografia-fundo-pano.jpg" alt="CityprojectSearch" style="border-radius: 50%; width: 50px; margin-top: 5px"></h4></a>
+                  <a href="map-project.html" class="brand-logo"><h4 style="font-family: 'Sedgwick Ave', cursive; margin-top: -5px"> City Project Search <img src="https://ae01.alicdn.com/kf/HTB1fmmgdI2vU1JjSZFwq6x2cpXaJ/Luz-Da-Cidade-de-Nuvens-brancas-Super-City-Batman-do-est-dio-da-fotografia-fundo-pano.jpg" alt="CityprojectSearch" style="border-radius: 50%; width: 50px; margin-top: 5px"></h4></a>
                   <ul class="right hide-on-med-and-down" style="list-style: none;">
-                      <li class="active"><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
+                      <li class="active"><a href="map-project.html"><i class="material-icons">search</i></a></li>
                       <li><a href="projects-listed.html"><i class="material-icons">assignment</i></a></li>
                     </ul>
                     <ul  id="nav-mobile" class="side-nav">
-                        <li class="active"><a href="google-maps-api.html"><i class="material-icons">search</i></a></li>
+                        <li class="active"><a href="map-project.html"><i class="material-icons">search</i></a></li>
                         <li><a href="projects-listed.html"><i class="material-icons">assignment</i></a></li>
                     </ul>
                     <a href="#" data-activates="nav-mobile" class="button-collapse">
