--- a/map-project.html
+++ b/map-project.html
@@ -83,7 +83,7 @@
                             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQJ_sXBz0eIPT4l3pN7QsC_XYKG42JMcU"></script>
                             <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
                             <script src="materialize/js/materialize.min.js"></script>
-                            <script src="js/map-project.js"></script>
+                            <script src="map-project.js"></script>
        
 
 </body>
