added ext files

--- a/projects-listed.html
+++ b/projects-listed.html
@@ -70,6 +70,7 @@
         
     </footer>
     <!--End of container -->
+    <script type="text/javascript" src="extjs/ext-all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="materialize/js/materialize.min.js"></script>
