--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                                 </div>
                                 
                             </footer>
+                            <script type="text/javascript" src="extjs/ext-all.js"></script>
                             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
                             <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQJ_sXBz0eIPT4l3pN7QsC_XYKG42JMcU"></script>
                             <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
